// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en ProductCard Debe de cargarse correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;

exports[`Pruebas en ProductCard Debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
     +1 
  </button>
</div>
`;
